@@ -3,7 +3,6 @@ package forge.deck;
 import com.badlogic.gdx.Input.Keys;
 import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.utils.Align;
-import com.google.common.collect.ImmutableList;
 import forge.Forge;
 import forge.Forge.KeyInputAdapter;
 import forge.Graphics;
@@ -30,6 +29,7 @@ import forge.itemmanager.ItemManager.ContextMenuBuilder;
 import forge.itemmanager.ItemManagerConfig;
 import forge.itemmanager.filters.ItemFilter;
 import forge.localinstance.properties.ForgePreferences.FPref;
+import forge.localinstance.skin.FSkinProp;
 import forge.menu.*;
 import forge.model.FModel;
 import forge.screens.FScreen;
@@ -65,8 +65,8 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             return gameType == null ? null : gameType.getDeckFormat();
         }
 
-        public ItemPool<PaperCard> getCardPool(boolean wantUnique) {
-            return wantUnique ? FModel.getUniqueCardsNoAlt() : FModel.getAllCardsNoAlt();
+        public ItemPool<PaperCard> getCardPool() {
+            return FModel.getAllCards();
         }
         protected Predicate<PaperCard> getCardFilter() { return null; }
 
@@ -81,13 +81,21 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         public boolean allowsCardReplacement() { return hasInfiniteCardPool() || usePlayerInventory(); }
 
         public List<CardEdition> getBasicLandSets(Deck currentDeck) {
+            if(hasInfiniteCardPool())
+                return FModel.getMagicDb().getSortedEditions().stream().filter(CardEdition::hasBasicLands).collect(Collectors.toList());
             return List.of(DeckProxy.getDefaultLandSet(currentDeck));
         }
 
         protected abstract IDeckController getController();
         protected abstract DeckEditorPage[] getInitialPages();
 
-        protected DeckSection[] getExtraSections() {
+        public DeckSection[] getPrimarySections() {
+            if(getGameType() != null)
+                return getGameType().getPrimaryDeckSections().toArray(new DeckSection[0]);
+            return new DeckSection[]{DeckSection.Main, DeckSection.Sideboard};
+        }
+
+        public DeckSection[] getExtraSections() {
             if(getGameType() != null)
                 return getGameType().getSupplimentalDeckSections().toArray(new DeckSection[0]);
             return new DeckSection[]{DeckSection.Attractions, DeckSection.Contraptions};
@@ -144,7 +152,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         ItemManagerConfig catalogConfig = null;
         ItemManagerConfig mainSectionConfig = null;
         ItemManagerConfig sideboardConfig = null;
-        Function<Deck, CardEdition> fnGetBasicLandSet = null;
+        Function<Deck, Collection<CardEdition>> fnGetBasicLandSet = null;
         Supplier<ItemPool<PaperCard>> itemPoolSupplier = null;
         String catalogCaption = null;
 
@@ -163,10 +171,10 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         @Override public boolean hasCommander() { return deckFormat.hasCommander(); }
 
         @Override
-        public ItemPool<PaperCard> getCardPool(boolean wantUnique) {
+        public ItemPool<PaperCard> getCardPool() {
             if(this.itemPoolSupplier != null)
                 return itemPoolSupplier.get();
-            return super.getCardPool(wantUnique);
+            return super.getCardPool();
         }
 
         @Override
@@ -196,7 +204,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             this.sideboardConfig = sideboardConfig;
             return this;
         }
-        public GameTypeDeckEditorConfig setBasicLandSetFunction(Function<Deck, CardEdition> fnGetBasicLandSet) {
+        public GameTypeDeckEditorConfig setBasicLandSetFunction(Function<Deck, Collection<CardEdition>> fnGetBasicLandSet) {
             this.fnGetBasicLandSet = fnGetBasicLandSet;
             return this;
         }
@@ -296,8 +304,20 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         }
 
         @Override
-        protected DeckSection[] getExtraSections() {
+        public DeckSection[] getPrimarySections() {
+            return gameType.getPrimaryDeckSections().toArray(new DeckSection[0]);
+        }
+
+        @Override
+        public DeckSection[] getExtraSections() {
             return gameType.getSupplimentalDeckSections().toArray(new DeckSection[0]);
+        }
+
+        @Override
+        public List<CardEdition> getBasicLandSets(Deck currentDeck) {
+            if(this.fnGetBasicLandSet != null)
+                return List.copyOf(fnGetBasicLandSet.apply(currentDeck));
+            return super.getBasicLandSets(currentDeck);
         }
     }
 
@@ -348,18 +368,19 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             .setMainSectionConfig(ItemManagerConfig.QUEST_DECK_EDITOR)
             .setSideboardConfig(ItemManagerConfig.QUEST_DECK_EDITOR)
             .setPlayerInventorySupplier(() -> FModel.getQuest().getCards().getCardpool())
-            .setBasicLandSetFunction(d -> FModel.getQuest().getDefaultLandSet());
+            .setBasicLandSetFunction(d -> FModel.getQuest().getAvailableLandSets());
     public static DeckEditorConfig EditorConfigQuestCommander = new GameTypeDeckEditorConfig(GameType.QuestCommander, DECK_CONTROLLER_QUEST)
             .setCatalogConfig(ItemManagerConfig.QUEST_EDITOR_POOL)
             .setMainSectionConfig(ItemManagerConfig.QUEST_DECK_EDITOR)
             .setSideboardConfig(ItemManagerConfig.QUEST_DECK_EDITOR)
             .setPlayerInventorySupplier(() -> FModel.getQuest().getCards().getCardpool())
-            .setBasicLandSetFunction(d -> FModel.getQuest().getDefaultLandSet());
+            .setBasicLandSetFunction(d -> FModel.getQuest().getAvailableLandSets());
     public static DeckEditorConfig EditorConfigQuestDraft = new GameTypeDeckEditorConfig(GameType.QuestDraft, DECK_CONTROLLER_QUEST_DRAFT);
     public static DeckEditorConfig EditorConfigPlanarConquest = new GameTypeDeckEditorConfig(GameType.PlanarConquest, DECK_CONTROLLER_PLANAR_CONQUEST)
             .setCatalogConfig(ItemManagerConfig.CONQUEST_COLLECTION)
             .setMainSectionConfig(ItemManagerConfig.CONQUEST_DECK_EDITOR)
-            .setPlayerInventorySupplier(ConquestUtil::getAvailablePool);
+            .setPlayerInventorySupplier(ConquestUtil::getAvailablePool)
+            .setBasicLandSetFunction(ConquestUtil::getBasicLandSets);
 
     protected static DeckSectionPage createPageForExtraSection(DeckSection deckSection, DeckEditorConfig editorConfig) {
         CardManager cm = new CardManager(false);
@@ -388,18 +409,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
     }
 
     public static FImage iconFromDeckSection(DeckSection deckSection) {
-        return switch (deckSection) {
-            case Main -> MAIN_DECK_ICON;
-            case Sideboard -> SIDEBOARD_ICON;
-            case Commander -> FSkinImage.COMMAND;
-            case Avatar -> FSkinImage.AVATAR;
-            case Conspiracy -> FSkinImage.CONSPIRACY;
-            case Planes -> FSkinImage.PLANAR;
-            case Schemes -> FSkinImage.SCHEME;
-            case Attractions -> FSkinImage.ATTRACTION;
-            case Contraptions -> FSkinImage.CONTRAPTION;
-            default -> FSkinImage.HDSIDEBOARD;
-        };
+        return FSkin.getImages().get(FSkinProp.iconFromDeckSection(deckSection, Forge.hdbuttons));
     }
 
     private final DeckEditorConfig editorConfig;
@@ -452,12 +462,15 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         tabPages.stream().map(DeckEditorPage.class::cast).forEach(DeckEditorPage::initialize);
         tabsInitialized = true;
 
-        //Pick an initial page to show. Test for catalog page so we don't switch off a draft screen.
-        if(!tabPages.isEmpty() && tabPages.get(0) instanceof CatalogPage) { //DraftPackPage is also a CatalogPage
-            if(mainDeckPage != null && mainDeckPage.cardManager.getItemCount() > 0)
+        //Pick an initial page to show.
+        if(!tabPages.isEmpty()) {
+            if(isDraftEditor() && isDrafting() && catalogPage != null)
+                setSelectedPage(catalogPage);
+            else if(mainDeckPage != null && mainDeckPage.cardManager.getItemCount() > 0)
                 setSelectedPage(mainDeckPage);
             else if(sideboardPage != null && sideboardPage.cardManager.getItemCount() > 0)
                 setSelectedPage(sideboardPage);
+            //Otherwise we just show whatever tab is first.
         }
 
         //Show any extra sections that are currently in use.
@@ -542,74 +555,73 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             @Override
             protected void buildMenu() {
                 final Localizer localizer = Forge.getLocalizer();
-                if (allowsAddBasic())
+                if (allowAddBasic())
                     addItem(new FMenuItem(localizer.getMessage("lblAddBasicLands"), FSkinImage.LANDLOGO, e -> showAddBasicLandsDialog()));
                 if (showAddExtraSectionOption()) {
                     addItem(new FMenuItem(localizer.getMessage("lblAddDeckSection"), FSkinImage.CHAOS, e -> {
                         List<String> options = hiddenExtraSections.stream().map(DeckSection::getLocalizedName).collect(Collectors.toList());
-                        GuiChoose.oneOrNone(localizer.getMessage("lblAddDeckSectionSelect"), options, new Callback<>() {
-                            @Override
-                            public void run(String result) {
-                                if (result == null || !options.contains(result))
-                                    return;
-                                DeckSection newSection = hiddenExtraSections.get(options.indexOf(result));
-                                showExtraSectionTab(newSection);
-                                filterCatalogForExtraSection(newSection);
-                                getCatalogPage().scheduleRefresh();
-                                setSelectedPage(getCatalogPage());
-                            }
+                        GuiChoose.oneOrNone(localizer.getMessage("lblAddDeckSectionSelect"), options, result -> {
+                            if (result == null || !options.contains(result))
+                                return;
+                            DeckSection newSection = hiddenExtraSections.get(options.indexOf(result));
+                            showExtraSectionTab(newSection);
+                            filterCatalogForExtraSection(newSection);
+                            getCatalogPage().scheduleRefresh();
+                            setSelectedPage(getCatalogPage());
                         });
                     }));
                 }
-                if (editorConfig.getGameType() != null && editorConfig.hasInfiniteCardPool()) {
+                if (editorConfig.hasInfiniteCardPool() || editorConfig.usePlayerInventory()) {
                     addItem(new FMenuItem(localizer.getMessage("lblImportFromClipboard"), Forge.hdbuttons ? FSkinImage.HDIMPORT : FSkinImage.OPEN, e -> {
-                        FDeckImportDialog dialog = new FDeckImportDialog(!deck.isEmpty(), FDeckEditor.this.editorConfig);
-                        dialog.setCallback(new Callback<>() {
-                            @Override
-                            public void run(Deck importedDeck) {
-                                if (deck != null && importedDeck.hasName()) {
-                                    deck.setName(importedDeck.getName());
-                                    setHeaderText(importedDeck.getName());
-                                }
-                                if (dialog.createNewDeck()) {
-                                    for (Entry<DeckSection, CardPool> section : importedDeck) {
-                                        DeckSectionPage page = getPageForSection(section.getKey());
-                                        if (page != null)
-                                            page.setCards(section.getValue());
+                        FDeckImportDialog dialog = new FDeckImportDialog(deck, FDeckEditor.this.editorConfig);
+                        if(editorConfig.usePlayerInventory())
+                            dialog.setFreePrintConverter(FDeckEditor.this::supplyPrintForImporter);
+                        dialog.setImportBannedCards(!FModel.getPreferences().getPrefBoolean(FPref.ENFORCE_DECK_LEGALITY));
+                        dialog.setCallback(importedDeck -> {
+                            if (deck != null && importedDeck.hasName()) {
+                                deck.setName(importedDeck.getName());
+                                setHeaderText(importedDeck.getName());
+                            }
+                            switch (dialog.getImportBehavior()) {
+                                case REPLACE_CURRENT:
+                                    for(DeckSectionPage page : pagesBySection.values()) {
+                                        if(importedDeck.has(page.deckSection)) {
+                                            page.setCards(importedDeck.get(page.deckSection));
+                                            if(hiddenExtraSections.contains(page.deckSection))
+                                                showExtraSectionTab(page.deckSection);
+                                        }
+                                        else
+                                            page.setCards(new CardPool());
                                     }
-                                } else {
+                                    break;
+                                case CREATE_NEW:
+                                    deckController.setDeck(importedDeck);
+                                    break;
+                                case MERGE:
                                     for (Entry<DeckSection, CardPool> section : importedDeck) {
                                         DeckSectionPage page = getPageForSection(section.getKey());
                                         if (page != null)
                                             page.addCards(section.getValue());
                                     }
-                                }
                             }
                         });
+                        dialog.initParse();
                         dialog.show();
                         setSelectedPage(getMainDeckPage()); //select main deck page if needed so main deck if visible below dialog
                     }));
                     if (allowSaveAs())
                         addItem(new FMenuItem(localizer.getMessage("lblSaveAs"), Forge.hdbuttons ? FSkinImage.HDSAVEAS : FSkinImage.SAVEAS, e -> {
                             String defaultName = deckController.getNextAvailableName();
-                            FOptionPane.showInputDialog(localizer.getMessage("lblNameNewCopyDeck"), defaultName, new Callback<>() {
-                                @Override
-                                public void run(String result) {
-                                    if (!StringUtils.isEmpty(result)) {
-                                        deckController.saveAs(result);
-                                    }
+                            FOptionPane.showInputDialog(localizer.getMessage("lblNameNewCopyDeck"), defaultName, result -> {
+                                if (!StringUtils.isEmpty(result)) {
+                                    deckController.saveAs(result);
                                 }
                             });
                         }));
                 }
                 if (allowRename()) {
                     addItem(new FMenuItem(localizer.getMessage("lblRenameDeck"), Forge.hdbuttons ? FSkinImage.HDEDIT : FSkinImage.EDIT, e -> FOptionPane.showInputDialog(
-                            localizer.getMessage("lblNewNameDeck"), deck.getName(), new Callback<>() {
-                                @Override
-                                public void run(String result) {
-                                    deckController.rename(result);
-                                }
-                            }))
+                            localizer.getMessage("lblNewNameDeck"), deck.getName(), deckController::rename))
                     );
                 }
                 if (allowDelete()) {
@@ -618,13 +630,10 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                             localizer.getMessage("lblDeleteDeck"),
                             localizer.getMessage("lblDelete"),
                             localizer.getMessage("lblCancel"), false,
-                            new Callback<>() {
-                                @Override
-                                public void run(Boolean result) {
-                                    if (result) {
-                                        deckController.delete();
-                                        Forge.back();
-                                    }
+                            result -> {
+                                if (result) {
+                                    deckController.delete();
+                                    Forge.back();
                                 }
                             }))
                     );
@@ -649,12 +658,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         CardEdition defaultLandSet = allowedLandSets.get(0);
         List<CardEdition> finalAllowedLandSets = allowedLandSets;
         FThreads.invokeInEdtNowOrLater(() -> {
-            AddBasicLandsDialog dialog = new AddBasicLandsDialog(deck, defaultLandSet, new Callback<>() {
-                @Override
-                public void run(CardPool landsToAdd) {
-                    addChosenBasicLands(landsToAdd);
-                }
-            }, editorConfig.hasInfiniteCardPool() ? null : finalAllowedLandSets); //Null allows any lands to be selected
+            AddBasicLandsDialog dialog = new AddBasicLandsDialog(deck, defaultLandSet, this::addChosenBasicLands, editorConfig.hasInfiniteCardPool() ? null : finalAllowedLandSets); //Null allows any lands to be selected
             dialog.show();
 
         });
@@ -663,6 +667,20 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
 
     protected void addChosenBasicLands(CardPool landsToAdd) {
         getMainDeckPage().addCards(landsToAdd);
+    }
+
+    /**
+     * If a card is missing from a player's inventory while importing a deck, it gets run through here.
+     * Returning a PaperCard will let unlimited copies of that card be used as a substitute. Returning null
+     * will leave the card missing from the import.
+     */
+    protected PaperCard supplyPrintForImporter(PaperCard missingCard) {
+        //Could support dungeons here too? Not that we really use them in the editor...
+        if(!missingCard.isVeryBasicLand())
+            return null;
+        List<CardEdition> basicSets = editorConfig.getBasicLandSets(deck);
+        String setCode = basicSets.isEmpty() ? "JMP" : basicSets.get(0).getCode();
+        return FModel.getMagicDb().fetchCard(missingCard.getCardName(), setCode, null);
     }
 
     protected boolean shouldEnforceConformity() {
@@ -686,14 +704,11 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
     }
 
     protected void showDevAddCardDialog() {
-        FOptionPane.showInputDialog(Forge.getLocalizer().getMessage("lblPromptCardRequest"), new Callback<>() {
-            @Override
-            public void run(String result) {
-                if(StringUtils.isBlank(result))
-                    return;
-                CardPool requested = CardPool.fromSingleCardRequest(result);
-                devAddCards(requested);
-            }
+        FOptionPane.showInputDialog(Forge.getLocalizer().getMessage("lblPromptCardRequest"), result -> {
+            if(StringUtils.isBlank(result))
+                return;
+            CardPool requested = CardPool.fromSingleCardRequest(result);
+            devAddCards(requested);
         });
     }
 
@@ -720,6 +735,9 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             showExtraSectionTab(section);
         if(pagesBySection.containsKey(section))
             setSelectedPage(pagesBySection.get(section));
+        else if(section == DeckSection.Main && pagesBySection.containsKey(mainDeckPage.deckSection))
+            //Tried to switch to the Main page in a Planar or Scheme deck.
+            setSelectedPage(pagesBySection.get(mainDeckPage.deckSection));
     }
 
     public void notifyNewControllerModel() {
@@ -914,7 +932,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         saveHandler = saveHandler0;
     }
 
-    public void save(final Callback<Boolean> callback) {
+    public void save(final Consumer<Boolean> callback) {
         IDeckController deckController = getDeckController();
         if(deckController.supportsSave()) {
             if (!StringUtils.isEmpty(deck.getName())) {
@@ -924,15 +942,12 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 List<PaperCard> commanders = deck.getCommanders(); //use commander name as default deck name
                 String initialInput = commanders.isEmpty() ? "New Deck" : Lang.joinHomogenous(commanders);
                 FThreads.invokeInEdtNowOrLater(() -> {
-                    FOptionPane.showInputDialog(Forge.getLocalizer().getMessage("lblNameNewDeck"), initialInput, new Callback<>() {
-                        @Override
-                        public void run(String result) {
-                            if (StringUtils.isEmpty(result)) { return; }
+                    FOptionPane.showInputDialog(Forge.getLocalizer().getMessage("lblNameNewDeck"), initialInput, result -> {
+                        if (StringUtils.isEmpty(result)) { return; }
 
-                            deckController.saveAs(result);
-                            if (callback != null) {
-                                callback.run(true);
-                            }
+                        deckController.saveAs(result);
+                        if (callback != null) {
+                            callback.accept(true);
                         }
                     });
                 });
@@ -941,7 +956,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         }
 
         if (callback != null) {
-            callback.run(true);
+            callback.accept(true);
         }
     }
 
@@ -966,30 +981,27 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         save(null);
     }
 
-    private final static ImmutableList<String> onCloseOptions = ImmutableList.of(
+    private final static List<String> onCloseOptions = List.of(
         Localizer.getInstance().getMessage("lblSave"),
         Localizer.getInstance().getMessage("lblDontSave"),
         Localizer.getInstance().getMessage("lblCancel")
     );
 
     @Override
-    public void onClose(final Callback<Boolean> canCloseCallback) {
+    public void onClose(final Consumer<Boolean> canCloseCallback) {
         if (getDeckController().isSaved() || !allowSave() || canCloseCallback == null) {
             super.onClose(canCloseCallback); //can skip prompt if draft saved
             return;
         }
         FOptionPane.showOptionDialog(Forge.getLocalizer().getMessage("lblSaveChangesCurrentDeck"), "",
-                FOptionPane.QUESTION_ICON, onCloseOptions, new Callback<>() {
-                    @Override
-                    public void run(Integer result) {
-                        if (result == 0) {
-                            save(canCloseCallback);
-                        } else if (result == 1) {
-                            getDeckController().exitWithoutSaving(); //reload if not saving changes
-                            canCloseCallback.run(true);
-                        } else {
-                            canCloseCallback.run(false);
-                        }
+                FOptionPane.QUESTION_ICON, onCloseOptions, result -> {
+                    if (result == 0) {
+                        save(canCloseCallback);
+                    } else if (result == 1) {
+                        getDeckController().exitWithoutSaving(); //reload if not saving changes
+                        canCloseCallback.accept(true);
+                    } else {
+                        canCloseCallback.accept(false);
                     }
                 });
     }
@@ -1058,7 +1070,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
     protected boolean allowSaveAs() {
         return allowSave() && allowRename();
     }
-    protected boolean allowsAddBasic() {
+    protected boolean allowAddBasic() {
         return !isDrafting();
     }
 
@@ -1346,7 +1358,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         protected abstract void onCardActivated(PaperCard card);
         protected abstract void buildMenu(final FDropDownMenu menu, final PaperCard card);
 
-        protected void addMoveCardMenuItem(FDropDownMenu menu, CardManagerPage source, CardManagerPage destination, final Callback<Integer> callback) {
+        protected void addMoveCardMenuItem(FDropDownMenu menu, CardManagerPage source, CardManagerPage destination, final Consumer<Integer> callback) {
             //Determine how many we can actually move.
             ItemPool<PaperCard> selectedItemPool = parentScreen.getAllowedAdditions(cardManager.getSelectedItemPool(), source, destination);
 
@@ -1409,7 +1421,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             final int max = maxMovable;
             menu.addItem(new FMenuItem(label, icon, (e) -> {
                 if(max < 2)
-                    callback.run(1);
+                    callback.accept(1);
                 else
                     GuiChoose.getInteger(prompt, 1, max, 20, callback);
             }));
@@ -1431,7 +1443,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             this.addMoveCardMenuItem(menu, source, destination, new MoveCardCallback(card, source, destination));
         }
 
-        protected static class MoveCardCallback extends Callback<Integer> {
+        protected static class MoveCardCallback implements Consumer<Integer> {
             public final PaperCard card;
             public final CardManagerPage from;
             public final CardManagerPage to;
@@ -1442,7 +1454,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 this.to = to;
             }
             @Override
-            public void run(Integer result) {
+            public void accept(Integer result) {
                 if(result == null || result == 0)
                     return;
                 from.moveCard(card, to, result);
@@ -1465,13 +1477,10 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 if(max < 2)
                     callback.accept(1);
                 else
-                    GuiChoose.getInteger(prompt, 1, max, 20, new Callback<>() {
-                        @Override
-                        public void run(Integer result) {
-                            if (result == null || result == 0)
-                                return;
-                            callback.accept(result);
-                        }
+                    GuiChoose.getInteger(prompt, 1, max, 20, result -> {
+                        if (result == null || result == 0)
+                            return;
+                        callback.accept(result);
                     });
             }
         }
@@ -1543,6 +1552,8 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 return false;
             if(parentScreen.getCommanderPage().cardManager.getPool().contains(card))
                 return false; //Don't let it be the commander if it already is one.
+            if(!parentScreen.shouldEnforceConformity())
+                return card.getRules().canBeCreature();
             DeckFormat format = parentScreen.editorConfig.getDeckFormat();
             if(format == null)
                 format = DeckFormat.Commander;
@@ -1706,7 +1717,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
 
             //Clone the pool to ensure we don't mutate it by adding to or removing from this page.
             //Can override this if that behavior is desired.
-            ItemPool<PaperCard> cardPool = CardPool.createFrom(parentScreen.getEditorConfig().getCardPool(cardManager.getWantUnique()), PaperCard.class);
+            ItemPool<PaperCard> cardPool = CardPool.createFrom(parentScreen.getEditorConfig().getCardPool(), PaperCard.class);
 
             if(editorConfig.usePlayerInventory() && currentDeck != null) {
                 //Remove any items from the pool that are in the deck.
@@ -1859,16 +1870,13 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                                 sortedOptions.add(option);
                             }
                         }
-                        GuiChoose.oneOrNone(Forge.getLocalizer().getMessage("lblSelectPreferredArt") + " " + card.getName(), sortedOptions, new Callback<>() {
-                            @Override
-                            public void run(PaperCard result) {
-                                if (result != null) {
-                                    if (result != card) {
-                                        cardManager.replaceAll(card, result);
-                                    }
-                                    prefs.setPreferredArt(result.getEdition(), result.getArtIndex());
-                                    CardPreferences.save();
+                        GuiChoose.oneOrNone(Forge.getLocalizer().getMessage("lblSelectPreferredArt") + " " + card.getDisplayName(), sortedOptions, result -> {
+                            if (result != null) {
+                                if (result != card) {
+                                    cardManager.replaceAll(card, result);
                                 }
+                                prefs.setPreferredArt(result.getEdition(), result.getArtIndex());
+                                CardPreferences.save();
                             }
                         });
                     }));
@@ -1882,8 +1890,8 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 menu.addItem(new FCheckBoxMenuItem(Forge.getLocalizer().getMessage("lblUniqueCardsOnly"), cardManager.getWantUnique(), e -> {
                     boolean wantUnique = !cardManager.getWantUnique();
                     cardManager.setWantUnique(wantUnique);
-                    refresh();
                     cardManager.getConfig().setUniqueCardsOnly(wantUnique);
+                    cardManager.refresh();
                 }));
             }
         }
@@ -2024,14 +2032,11 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 break;
             case Commander:
                 if (canEditMainCommander() || isPartnerCommander(card)) {
-                    addMoveCardMenuItem(menu, this, cardSourcePage, new Callback<>() {
-                        @Override
-                        public void run(Integer result) {
-                            moveCard(card, cardSourcePage, result);
-                            if(cardSourcePage == parentScreen.getCatalogPage()) {
-                                parentScreen.getCatalogPage().refresh(); //refresh so commander options shown again
-                                parentScreen.setSelectedPage(parentScreen.getCatalogPage());
-                            }
+                    addMoveCardMenuItem(menu, this, cardSourcePage, result -> {
+                        moveCard(card, cardSourcePage, result);
+                        if(cardSourcePage == parentScreen.getCatalogPage()) {
+                            parentScreen.getCatalogPage().refresh(); //refresh so commander options shown again
+                            parentScreen.setSelectedPage(parentScreen.getCatalogPage());
                         }
                     });
                     addReplaceVariantItems(menu, card);
@@ -2054,6 +2059,17 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         }
 
         protected void addPerCardItems(FDropDownMenu menu, PaperCard card) {
+            Deck currentDeck = parentScreen.getDeck();
+            if (currentDeck != null) {
+                // Add key card toggle option
+                boolean isKeyCard = currentDeck.getKeyCards().stream().anyMatch(name -> name.equalsIgnoreCase(card.getName()));
+                String keyCardLabel = isKeyCard ? Forge.getLocalizer().getMessage("lblRemoveKeyCard") : Forge.getLocalizer().getMessage("lblAddKeyCard");
+                
+                menu.addItem(new FMenuItem(keyCardLabel, Forge.hdbuttons ? FSkinImage.HDPREFERENCE : FSkinImage.SETTINGS, e -> {
+                    toggleCardKeyCard(currentDeck, card, isKeyCard);
+                }));
+            }
+
             int markedColorCount = card.getRules().getSetColorID();
             if (markedColorCount > 0) {
                 menu.addItem(new FMenuItem(Forge.getLocalizer().getMessage("lblColorIdentity"), Forge.hdbuttons ? FSkinImage.HDPREFERENCE : FSkinImage.SETTINGS, e -> {
@@ -2063,12 +2079,9 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                     else
                         currentColors = null;
                     String prompt = Forge.getLocalizer().getMessage("lblChooseAColor", Lang.getNumeral(markedColorCount));
-                    GuiChoose.getChoices(prompt, markedColorCount, markedColorCount, MagicColor.Constant.ONLY_COLORS, currentColors, null, new Callback<>() {
-                        @Override
-                        public void run(List<String> result) {
-                            addCard(card.copyWithMarkedColors(ColorSet.fromNames(result)));
-                            removeCard(card);
-                        }
+                    GuiChoose.getChoices(prompt, markedColorCount, markedColorCount, MagicColor.Constant.ONLY_COLORS, currentColors, null, result -> {
+                        addCard(card.copyWithMarkedColors(ColorSet.fromNames(result)));
+                        removeCard(card);
                     });
                 }));
             }
@@ -2106,24 +2119,21 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             }
             final Localizer localizer = Forge.getLocalizer();
             String lblReplaceCard = localizer.getMessage("lblReplace");
-            String prompt = localizer.getMessage("lblSelectReplacementCard") + " " + card.getName();
+            String prompt = localizer.getMessage("lblSelectReplacementCard") + " " + card.getDisplayName();
             String promptQuantity = String.format("%s - %s %s", card, lblReplaceCard, localizer.getMessage("lblHowMany"));
             //First have the player choose which card to swap in.
-            GuiChoose.oneOrNone(prompt, sortedOptions, new Callback<>() {
-                @Override
-                public void run(PaperCard replacement) {
-                    if (replacement == null || replacement == card)
-                        return;
-                    //Next, ask how many copies they'd like to swap, taking into account the number available.
-                    int available = parentScreen.getCardSourcePage().cardManager.isInfinite() ? Integer.MAX_VALUE : cardOptions.count(replacement);
-                    int maxMovable = Math.min(available, cardManager.getItemCount(card));
-                    new MoveQuantityPrompt(promptQuantity, maxMovable, (amount) -> {
-                        CardManagerPage sourcePage = parentScreen.getCardSourcePage();
-                        //Finally, swap the cards.
-                        DeckSectionPage.this.moveCard(card, sourcePage, amount);
-                        sourcePage.moveCard(replacement, DeckSectionPage.this, amount);
-                    }).handleEvent(e);
-                }
+            GuiChoose.oneOrNone(prompt, sortedOptions, replacement -> {
+                if (replacement == null || replacement == card)
+                    return;
+                //Next, ask how many copies they'd like to swap, taking into account the number available.
+                int available = parentScreen.getCardSourcePage().cardManager.isInfinite() ? Integer.MAX_VALUE : cardOptions.count(replacement);
+                int maxMovable = Math.min(available, cardManager.getItemCount(card));
+                new MoveQuantityPrompt(promptQuantity, maxMovable, (amount) -> {
+                    CardManagerPage sourcePage = parentScreen.getCardSourcePage();
+                    //Finally, swap the cards.
+                    DeckSectionPage.this.moveCard(card, sourcePage, amount);
+                    sourcePage.moveCard(replacement, DeckSectionPage.this, amount);
+                }).handleEvent(e);
             });
         }
 
@@ -2141,6 +2151,24 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 addCard(newCard, amount);
                 removeCard(card, amount);
             }).handleEvent(e);
+        }
+
+        private void toggleCardKeyCard(final Deck deck, final PaperCard card, boolean isCurrentlyKeyCard) {
+            String cardName = card.getName();
+            
+            if (isCurrentlyKeyCard) {
+                // Remove from key cards
+                deck.removeKeyCard(cardName);
+            } else {
+                // Add to key cards
+                deck.addKeyCard(cardName);
+            }
+            
+            // Mark deck as modified so it will be saved
+            parentScreen.getDeckController().notifyModelChanged();
+            
+            // Refresh the view to show updated status
+            cardManager.refresh();
         }
 
         private boolean isPartnerCommander(final PaperCard card) {
@@ -2196,6 +2224,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 draft.postDraftActions();
                 hideTab(); //hide this tab page when finished drafting
                 parentScreen.completeDraft();
+                return; // pool is null; do not fall through to cardManager.setPool(pool) below
             }
 
             this.draftingFaceDown = getDraftPlayer().hasArchdemonCurse();
@@ -2294,29 +2323,23 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             if(!cardManager.isEnabled())
                 return;
             if(draftingFaceDown) {
-                addMoveCardMenuItem(menu, this, parentScreen.getSideboardPage(), new Callback<>() {
-                    @Override
-                    public void run(Integer result) { //ignore quantity
-                        PaperCard realCard = getDraftPlayer().pickFromArchdemonCurse(getDraftPlayer().nextChoice());
-                        moveCard(realCard, parentScreen.getSideboardPage());
-                    }
+                addMoveCardMenuItem(menu, this, parentScreen.getSideboardPage(), result -> { //ignore quantity
+                    PaperCard realCard = getDraftPlayer().pickFromArchdemonCurse(getDraftPlayer().nextChoice());
+                    moveCard(realCard, parentScreen.getSideboardPage());
                 });
                 return;
             }
             DeckSection destination = DeckSection.matchingSection(card);
             final DeckSectionPage destinationPage = parentScreen.getPageForSection(destination, true);
-            addMoveCardMenuItem(menu, this, destinationPage, new Callback<>() {
-                @Override
-                public void run(Integer result) { //ignore quantity
-                    moveCard(card, destinationPage);
-                }
+            addMoveCardMenuItem(menu, this, destinationPage, result -> { //ignore quantity
+                moveCard(card, destinationPage);
             });
-            addMoveCardMenuItem(menu, this, parentScreen.getSideboardPage(), new Callback<>() {
-                @Override
-                public void run(Integer result) { //ignore quantity
-                    moveCard(card, parentScreen.getSideboardPage());
-                }
-            });
+            addMoveCardMenuItem(menu,
+                    this,
+                    parentScreen.getSideboardPage(),
+                    result -> { //ignore quantity
+                        moveCard(card, parentScreen.getSideboardPage());
+                    });
         }
 
         @Override
